Bug fixes: overlapping components on mobile

--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding-top: 80px;
 
     
     .journey-section{
@@ -43,10 +44,10 @@
                 margin: auto;
             }
             h2{
-                width: 350px;
+                min-width: fit-content;
                 text-align: center;
                 color: var(--accent-color);
-                border: 2px solid var(--accent-color);
+                border: 1.5px solid var(--accent-color);
                 border-radius: 10px;
                 padding: 5px 10px;
                 margin-inline: 10px;
