--- a/src/pages/about/banner/Banner.scss
+++ b/src/pages/about/banner/Banner.scss
@@ -38,8 +38,10 @@
             display: flex;
             flex-wrap: wrap;
             gap: 8px;
+            margin-top: 10px;
 
             p{
+                margin: 0;
                 padding: 5px 10px;
                 border-radius: 10px;
                 opacity: 0.5;
