--- a/src/pages/contact/Contact.scss
+++ b/src/pages/contact/Contact.scss
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: auto;
     overflow: hidden;
+    padding-top: 80px;
     
    
     
