--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -3,13 +3,13 @@
     flex-direction: column;
     width: 100%;
     height: auto;
+    padding-top: 80px;
 
     .skills-section{
         padding-inline: clamp(20px, 10%, 80px);
         padding-top: 10px;
         padding-bottom: 35px;
         min-height: 100px;
-        max-height: auto;
         border-bottom: 1px solid var(--secondary-color);
         box-sizing: border-box;
 
@@ -31,15 +31,15 @@
             }
 
             h2{
-                width: 350px;
+                min-width: fit-content;
                 text-align: center;
                 color: var(--accent-color);
-                border: 2px solid var(--accent-color);
+                border: 1.5px solid var(--accent-color);
                 border-radius: 10px;
                 padding: 5px 10px;
                 margin-inline: 10px;
                 font-weight: 400;
-                font-size: clamp(1rem, 1vw, 1.5rem);
+                font-size: clamp(1rem, 1vw, 1.5rem); 
             }
          }
 
@@ -48,7 +48,7 @@
     .projects-section{
         width: 100%;
         padding-inline: clamp(20px, 10%, 80px);
-        padding-top: 10px;
+        padding-top: 20px;
         padding-bottom: 35px;
         min-height: 100px;
         max-height: auto;
@@ -60,15 +60,16 @@
             max-width: 1440px;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             color: var(--accent-color);
-            margin: auto;
+            margin: 10px auto 15px auto;
             box-sizing: border-box;
 
             h2{
-                 font-weight: 400;
-                 margin-right: auto;
+                 font-weight: 600;
+                 margin: auto;
+                 font-size: clamp(16px, 1.4vw, 20px);
             }
 
             p{
@@ -79,8 +80,15 @@
             }
         }
 
+        .projects-button{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
         @media screen and (max-width: 1400px) {
-            padding: 0;
+            padding: 20px 0;
 
             .projects-header{
                 padding-inline: clamp(20px, 10%, 80px);
