--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -10,6 +10,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        min-height: 100vh;
+        height: 100%;
     }
 }
