--- a/src/pages/resume/Resume.scss
+++ b/src/pages/resume/Resume.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: auto;
+    padding-top: 80px;
 
     .resume-section{
         width: 100%;
